--- a/main.html
+++ b/main.html
@@ -9,19 +9,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Job Application Form</h1>
 
   <form method="POST">
 
-    <label for="name">Name*:</label>
+    <label for="name">Name</label>
     <input type="text" id="name" name="name" required>
     <br><br>
 
-    <label for="email">Email*:</label>
+    <label for="email">Email</label>
     <input type="email" id="email" name="email" required>
     <br><br>
 
-    <label>Gender*:</label>
+    <label>Gender</label>
     <input type="radio" id="male" name="gender" value="Male" required>
     <label for="male">Male</label>
 
@@ -32,28 +31,28 @@
     <label for="other">Other</label>
     <br><br>
 
-    <label for="laptop">Laptop Brands:</label>
+    <label for="laptop">Laptop Brands</label>
     <select id="laptop" name="laptop">
-      <option value="">--Select Brand--</option>
+      <option value="">Select Brand</option>
       <option value="Apple">Apple</option>
       <option value="Asus">Asus</option>
       <option value="HP">HP</option>
     </select>
     <br><br>
 
-    <label for="age">Age*:</label>
+    <label for="age">Age</label>
     <input type="number" id="age" name="age" required>
     <br><br>
 
-    <label for="dob">Date of Birth*:</label>
+    <label for="dob">Date of Birth</label>
     <input type="date" id="dob" name="dob" required>
     <br><br>
 
-    <label for="password">Password*:</label>
+    <label for="password">Password</label>
     <input type="password" id="password" name="password" required>
     <br><br>
 
-    <label for="portfolio">Portfolio URL:</label>
+    <label for="portfolio">Portfolio URL</label>
     <input type="url" id="portfolio" name="portfolio">
     <br><br>
 
