--- a/main.html
+++ b/main.html
@@ -13,11 +13,11 @@
   <form method="POST">
 
     <label for="name">Name</label>
-    <input type="text" id="name" name="name" required>
+    <input type="text" id="name"  required>
     <br><br>
 
     <label for="email">Email</label>
-    <input type="email" id="email" name="email" required>
+    <input type="email" id="email" required>
     <br><br>
 
     <label>Gender</label>
@@ -40,19 +40,19 @@
     <br><br>
 
     <label for="age">Age</label>
-    <input type="number" id="age" name="age" required>
+    <input type="number" id="age" required>
     <br><br>
 
     <label for="dob">Date of Birth</label>
-    <input type="date" id="dob" name="dob" required>
+    <input type="date" id="dob" required>
     <br><br>
 
     <label for="password">Password</label>
-    <input type="password" id="password" name="password" required>
+    <input type="password" id="password"  required>
     <br><br>
 
     <label for="portfolio">Portfolio URL</label>
-    <input type="url" id="portfolio" name="portfolio">
+    <input type="url" id="portfolio" >
     <br>
     <button type="submit">Submit</button>
 
