--- a/main.html
+++ b/main.html
@@ -1,26 +1,23 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
-	<title>Job Application Form</title>
+  <title>Job Application Form</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
 
-  <form method="POST">
+  <h1>Job Application Form</h1>
 
-    <label for="name">Name</label>
-    <input type="text" id="name"  required>
+  <form method="post">
+
+    <label for="name">Name*:</label>
+    <input type="text" id="name" name="name" required>
     <br><br>
 
-    <label for="email">Email</label>
-    <input type="email" id="email" required>
+    <label for="email">Email*:</label>
+    <input type="email" id="email" name="email" required>
     <br><br>
 
-    <label>Gender</label>
+    <label>Gender*:</label>
     <input type="radio" id="male" name="gender" value="Male" required>
     <label for="male">Male</label>
 
@@ -31,35 +28,34 @@
     <label for="other">Other</label>
     <br><br>
 
-    <label for="laptop">Laptop Brands</label>
+    <label for="laptop">Laptop Brands:</label>
     <select id="laptop" name="laptop">
+      <option value="">--Select Brand--</option>
       <option value="Apple">Apple</option>
       <option value="Asus">Asus</option>
       <option value="HP">HP</option>
     </select>
     <br><br>
 
-    <label for="age">Age</label>
-    <input type="number" id="age" required>
+    <label for="age">Age*:</label>
+    <input type="number" id="age" name="age" required>
     <br><br>
 
-    <label for="dob">Date of Birth</label>
-    <input type="date" id="dob" required>
+    <label for="dob">Date of Birth*:</label>
+    <input type="date" id="dob" name="dob" required>
     <br><br>
 
-    <label for="password">Password</label>
-    <input type="password" id="password"  required>
+    <label for="password">Password*:</label>
+    <input type="password" id="password" name="password" required>
     <br><br>
 
-    <label for="portfolio">Portfolio URL</label>
-    <input type="url" id="portfolio" >
-    <br>
+    <label for="portfolio">Portfolio URL:</label>
+    <input type="url" id="portfolio" name="portfolio">
+    <br><br>
+
     <button type="submit">Submit</button>
 
   </form>
-    <script type="text/javascript" src="./script.js">
-</script>
 
 </body>
-
 </html>
